--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router": "^7.8.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
@@ -29,6 +30,6 @@
     "globals": "^16.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "vite": "^7.1.3"
   }
 }
