--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,13 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    "paths": {
+      "@components": ["./src/components"],
+      "@hooks": ["./src/hooks"],
+      "@": ["./src"],
+      "@public": ["./public"]
+    },
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
